--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
     "build": "turbo run build",
     "test": "turbo run test"
   },
+  "packageManager": "npm@11.6.2",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "devDependencies": {
     "turbo": "^2.6.3"
   }
