--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -16,7 +16,7 @@
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
-    "@packages/eslint-config-ui": "*",
+    "@packages/eslint-config-ui": "workspace:*",
     "@tailwindcss/vite": "^4.0.6",
     "@types/node": "^22.10.2",
     "@types/react": "^19.2.0",
