feat(AM-27): added gracefull shutdown and service register/unregister

--- a/apps/users-service/package.json
+++ b/apps/users-service/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@packages/nest-shared": "workspace:*",
+    "@packages/utils": "workspace:*",
     "@nestjs/common": "catalog:",
     "@nestjs/core": "catalog:",
     "nestjs-pino": "catalog:",
