--- a/apps/api-gateway-service/package.json
+++ b/apps/api-gateway-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "registry-service",
+  "name": "api-gateway-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -9,6 +9,8 @@
     "build": "nest build",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "gql:dev": "nest start --watch",
+    "rest:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -18,21 +20,22 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@nestjs/common": "catalog:",
-    "@nestjs/core": "catalog:",
-    "@nestjs/platform-express": "catalog:",
     "@packages/nest-shared": "workspace:*",
     "@packages/utils": "workspace:*",
-    "@packages/shared-types": "workspace:*",
+    "@nestjs/common": "catalog:",
+    "@nestjs/core": "catalog:",
+    "nestjs-pino": "catalog:",
+    "pino-http": "catalog:",
+    "@nestjs/platform-express": "catalog:",
     "reflect-metadata": "catalog:",
     "rxjs": "catalog:"
   },
   "devDependencies": {
+    "@packages/eslint-config-service": "workspace:*",
+    "@packages/tsconfig": "workspace:*",
     "@nestjs/cli": "catalog:",
     "@nestjs/schematics": "catalog:",
     "@nestjs/testing": "catalog:",
-    "@packages/eslint-config-service": "workspace:*",
-    "@packages/tsconfig": "workspace:*",
     "@types/express": "catalog:",
     "@types/jest": "catalog:",
     "@types/node": "catalog:",
