--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "scripts": {
     "build": "turbo run build",
+    "gql:dev": "turbo run gql:dev",
+    "rest:dev": "turbo run rest:dev",
     "build:packages": "turbo run build --filter='./packages/*'",
     "test": "turbo run test",
     "lint": "turbo run lint",
