--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,16 +3,23 @@ packages:
   - 'apps/*'
   # all packages in direct subdirs of packages/
   - 'packages/*'
+  # graphql related packages
+  - 'packages/graphql/*'
 
 catalog:
   "@nestjs/axios": "^4.0.1"
   "@nestjs/common": "^11.0.1"
   "@nestjs/config": "^4.0.2"
   "@nestjs/core": "^11.0.1"
+  "@nestjs/graphql": "^13.2.3"
+  "@nestjs/apollo": "^13.2.3"
   "@nestjs/platform-express": "^11.0.1"
   "@nestjs/cli": "^11.0.0"
   "@nestjs/schematics": "^11.0.0"
   "@nestjs/testing": "^11.0.1"
+  "@apollo/subgraph": "^2.12.2"
+  "@apollo/server": "^5.2.0"
+  "graphql": "^16.12.0"
   "nestjs-pino": "^4.5.0"
   "pino-http": "^11.0.0"
   "pino-pretty": "^13.1.3"
