feat(AM-27): added graphql configuration and playground

--- a/apps/api-gateway-service/package.json
+++ b/apps/api-gateway-service/package.json
@@ -20,22 +20,29 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@packages/nest-shared": "workspace:*",
-    "@packages/utils": "workspace:*",
+    "@apollo/gateway": "catalog:",
+    "@apollo/server": "catalog:",
+    "@nestjs/apollo": "catalog:",
+    "@nestjs/axios": "catalog:",
     "@nestjs/common": "catalog:",
+    "@nestjs/config": "catalog:",
     "@nestjs/core": "catalog:",
+    "@nestjs/graphql": "catalog:",
+    "@nestjs/platform-express": "catalog:",
+    "@packages/nest-shared": "workspace:*",
+    "@packages/shared-types": "workspace:*",
+    "@packages/utils": "workspace:*",
     "nestjs-pino": "catalog:",
     "pino-http": "catalog:",
-    "@nestjs/platform-express": "catalog:",
     "reflect-metadata": "catalog:",
     "rxjs": "catalog:"
   },
   "devDependencies": {
-    "@packages/eslint-config-service": "workspace:*",
-    "@packages/tsconfig": "workspace:*",
     "@nestjs/cli": "catalog:",
     "@nestjs/schematics": "catalog:",
     "@nestjs/testing": "catalog:",
+    "@packages/eslint-config-service": "workspace:*",
+    "@packages/tsconfig": "workspace:*",
     "@types/express": "catalog:",
     "@types/jest": "catalog:",
     "@types/node": "catalog:",
