--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -19,6 +19,7 @@ catalog:
   "@nestjs/testing": "^11.0.1"
   "@apollo/subgraph": "^2.12.2"
   "@apollo/server": "^5.2.0"
+  "@apollo/gateway": "^2.12.2"
   "graphql": "^16.12.0"
   "nestjs-pino": "^4.5.0"
   "pino-http": "^11.0.0"
