feat(AM-30): added ui package with hero-ui

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,20 +10,21 @@
     "check": "eslint --fix"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.132.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tailwindcss": "^4.0.6"
+    "@tanstack/react-router": "^1.144.0",
+    "@packages/ui-shared": "workspace:*",
+    "react": "catalog:",
+    "react-dom": "catalog:",
+    "tailwindcss": "catalog:"
   },
   "devDependencies": {
     "@packages/eslint-config-ui": "workspace:*",
-    "@tailwindcss/vite": "^4.0.6",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
-    "@vitejs/plugin-react": "^5.0.4",
-    "typescript": "5.9.3",
-    "vite": "^7.1.7",
-    "vite-tsconfig-paths": "^5.1.4"
+    "@tailwindcss/vite": "catalog:",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "@vitejs/plugin-react": "catalog:",
+    "typescript": "catalog:",
+    "vite": "catalog:",
+    "vite-tsconfig-paths": "catalog:"
   }
 }
