--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -29,7 +29,7 @@
     "@storybook/addon-a11y": "^10.1.8",
     "@storybook/addon-docs": "^10.1.8",
     "@storybook/addon-onboarding": "^10.1.8",
-    "vite": "^7.2.7",
+    "vite": "catalog:",
     "eslint-plugin-storybook": "^10.1.8",
     "vitest": "^4.0.15",
     "playwright": "^1.57.0",
