--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,9 +16,9 @@
   "devDependencies": {
     "@packages/eslint-config-ui": "workspace:*",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "tailwindcss": "^4"
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "tailwindcss": "catalog:"
   }
 }
