--- a/packages/eslint-config-ui/package.json
+++ b/packages/eslint-config-ui/package.json
@@ -10,6 +10,8 @@
     "access": "public"
   },
   "devDependencies": {
+    "@packages/eslint-config-base": "workspace:*",
+    "@types/eslint-plugin-jsx-a11y": "^6.10.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1"
