--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -41,3 +41,16 @@ catalog:
   "tsc-alias": "^1.8.16"
   "tsconfig-paths": "^4.2.0"
   "typescript": "5.9.3"
+  # UI
+  "react": "^19.2.3"
+  "react-dom": "^19.2.3"
+  "tailwindcss": "^4.1.18"
+  "vite": "^7.3.0"
+  "vite-tsconfig-paths": "^5.1.4"
+  "@types/react": "^19.2.3"
+  "@tailwindcss/vite": "^4.1.18"
+  "@types/react-dom": "^19.2.3"
+  "@vitejs/plugin-react": "^5.1.2"
+  "@heroui/react": "^2.8.7"
+  "@heroui/theme": "^2.4.25"
+  "framer-motion": "^12.23.26"
