feat(AM-30): added base graphql and ui adjustment for admin

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -7,17 +7,29 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint",
-    "check": "eslint --fix"
+    "check": "eslint --fix",
+    "codegen": "graphql-codegen --config node_modules/@packages/graphql-generated/codegen.config.ts",
+    "codegen:watch": "graphql-codegen --config node_modules/@packages/graphql-generated/codegen.config.ts --watch"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.144.0",
+    "@apollo/client": "catalog:",
+    "@graphql-typed-document-node/core": "catalog:",
     "@packages/ui-shared": "workspace:*",
+    "@tanstack/react-router": "^1.144.0",
+    "graphql": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
+    "rxjs": "catalog:",
     "tailwindcss": "catalog:"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "catalog:",
+    "@graphql-codegen/typescript": "catalog:",
+    "@graphql-codegen/typescript-operations": "catalog:",
+    "@graphql-codegen/near-operation-file-preset": "catalog:",
+    "@graphql-codegen/typed-document-node": "catalog:",
     "@packages/eslint-config-ui": "workspace:*",
+    "@packages/graphql-generated": "workspace:*",
     "@tailwindcss/vite": "catalog:",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
