--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -22,6 +22,7 @@
     "@nestjs/common": "catalog:",
     "@nestjs/core": "catalog:",
     "@nestjs/platform-express": "catalog:",
+    "@as-integrations/express5": "catalog:",
     "reflect-metadata": "catalog:",
     "rxjs": "catalog:"
   },
