--- a/packages/eslint-config-base/package.json
+++ b/packages/eslint-config-base/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "type": "module",
   "main": "index.js",
+  "types": "index.d.ts",
   "publishConfig": {
     "access": "public"
   },
