--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -20,12 +20,13 @@ catalog:
   "@apollo/subgraph": "^2.12.2"
   "@apollo/server": "^5.2.0"
   "@apollo/gateway": "^2.12.2"
+  "@as-integrations/express5": "^1.1.2"
   "graphql": "^16.12.0"
   "nestjs-pino": "^4.5.0"
   "pino-http": "^11.0.0"
   "pino-pretty": "^13.1.3"
   "reflect-metadata": "^0.2.2"
-  "rxjs": "^7.8.1"
+  "rxjs": "^7.8.2"
   "@types/express": "^5.0.0"
   "@types/jest": "^30.0.0"
   "@types/node": "^22.10.7"
@@ -41,3 +42,26 @@ catalog:
   "tsc-alias": "^1.8.16"
   "tsconfig-paths": "^4.2.0"
   "typescript": "5.9.3"
+
+  # UI
+  "react": "^19.2.3"
+  "react-dom": "^19.2.3"
+  "tailwindcss": "^4.1.18"
+  "vite": "^7.3.0"
+  "vite-tsconfig-paths": "^5.1.4"
+  "@types/react": "^19.2.3"
+  "@tailwindcss/vite": "^4.1.18"
+  "@types/react-dom": "^19.2.3"
+  "@vitejs/plugin-react": "^5.1.2"
+  "@heroui/react": "^2.8.7"
+  "@heroui/theme": "^2.4.25"
+  "framer-motion": "^12.23.26"
+  "@apollo/client": "^4.0.11"
+  "@graphql-typed-document-node/core": "^3.2.0"
+
+  # GraphQL Code Generator (latest versions compatible with Apollo Client v4)
+  "@graphql-codegen/cli": "^6.0.1"
+  "@graphql-codegen/typescript": "^5.0.7"
+  "@graphql-codegen/typescript-operations": "^5.0.7"
+  "@graphql-codegen/near-operation-file-preset": "^3.0.2"
+  "@graphql-codegen/typed-document-node": "^5.0.11"
