--- a/apps/users-service/.env.example
+++ b/apps/users-service/.env.example
@@ -1,7 +1,9 @@
 NODE_ENV=local
+APP_NAME=users-service
 APP_PORT=4102
 
 LOG_PRETTY=true
 LOG_LEVEL=debug
 
 INTERNAL_REGISTRY_SERVER_HOST=http://localhost:4100
+DB_CONNECTION_URL=
