--- a/apps/users-service/package.json
+++ b/apps/users-service/package.json
@@ -11,6 +11,13 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "migration:create": "create-migration",
+    "migration:run": "run-migrations --mode=dev",
+    "migration:run:prod": "run-migrations --mode=prod",
+    "migration:undo": "undo-migration --mode=dev",
+    "migration:undo:prod": "undo-migration --mode=prod",
+    "migration:undo:all": "undo-all-migrations --mode=dev",
+    "migration:undo:all:prod": "undo-all-migrations --mode=prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -38,6 +45,7 @@
     "typeorm": "catalog:"
   },
   "devDependencies": {
+    "@packages/scripts": "workspace:*",
     "@packages/eslint-config-service": "workspace:*",
     "@packages/tsconfig": "workspace:*",
     "@nestjs/cli": "catalog:",
