--- a/infra/local/docker-compose.yml
+++ b/infra/local/docker-compose.yml
@@ -18,6 +18,24 @@ services:
       start_period: 10s
     shm_size: 128mb
 
+  db-init:
+    image: postgres:16-alpine
+    env_file: .env.docker
+    volumes:
+      - ./init-db.sql:/init-db.sql:ro
+    networks:
+      - db
+    depends_on:
+      db:
+        condition: service_healthy
+    command: >
+      sh -c "
+        export PGPASSWORD=$${POSTGRES_PASSWORD} &&
+        psql -h db -U $${POSTGRES_USER} -d $${POSTGRES_DB} -f /init-db.sql &&
+        echo 'Database schemas initialized successfully'
+      "
+    restart: "no"
+
 networks:
   db:
     driver: bridge
