--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -26,6 +26,7 @@ catalog:
   "pg": "^8.16.3"
   "graphql": "^16.12.0"
   "nestjs-pino": "^4.5.0"
+  "pino": "^10.1.1"
   "pino-http": "^11.0.0"
   "pino-pretty": "^13.1.3"
   "reflect-metadata": "^0.2.2"
