--- a/packages/nest-shared/package.json
+++ b/packages/nest-shared/package.json
@@ -25,6 +25,26 @@
     "./graceful-shutdown": {
       "types": "./dist/graceful-shutdown/index.d.ts",
       "default": "./dist/graceful-shutdown/index.js"
+    },
+    "./orm": {
+      "types": "./dist/orm/index.d.ts",
+      "default": "./dist/orm/index.js"
+    },
+    "./orm/migration": {
+      "types": "./dist/orm/migration/index.d.ts",
+      "default": "./dist/orm/migration/index.js"
+    },
+    "./orm/migration/run-migration": {
+      "types": "./dist/orm/migration/run-migration.d.ts",
+      "default": "./dist/orm/migration/run-migration.js"
+    },
+    "./orm/migration/undo-migration": {
+      "types": "./dist/orm/migration/undo-migration.d.ts",
+      "default": "./dist/orm/migration/undo-migration.js"
+    },
+    "./orm/migration/undo-all-migrations": {
+      "types": "./dist/orm/migration/undo-all-migrations.d.ts",
+      "default": "./dist/orm/migration/undo-all-migrations.js"
     }
   },
   "scripts": {
@@ -45,12 +65,16 @@
     "@nestjs/axios": "catalog:",
     "@nestjs/common": "catalog:",
     "@nestjs/config": "catalog:",
+    "@nestjs/typeorm": "catalog:",
     "nestjs-pino": "catalog:",
+    "pino": "catalog:",
     "pino-pretty": "catalog:",
     "@nestjs/core": "catalog:",
     "@nestjs/platform-express": "catalog:",
     "reflect-metadata": "catalog:",
-    "rxjs": "catalog:"
+    "rxjs": "catalog:",
+    "typeorm": "catalog:",
+    "pg": "catalog:"
   },
   "devDependencies": {
     "@packages/eslint-config-service": "workspace:*",
