--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -17,12 +17,16 @@ catalog:
   "@nestjs/cli": "^11.0.0"
   "@nestjs/schematics": "^11.0.0"
   "@nestjs/testing": "^11.0.1"
+  "@nestjs/typeorm": "^11.0.0"
   "@apollo/subgraph": "^2.12.2"
   "@apollo/server": "^5.2.0"
   "@apollo/gateway": "^2.12.2"
   "@as-integrations/express5": "^1.1.2"
+  "typeorm": "^0.3.28"
+  "pg": "^8.16.3"
   "graphql": "^16.12.0"
   "nestjs-pino": "^4.5.0"
+  "pino": "^10.1.1"
   "pino-http": "^11.0.0"
   "pino-pretty": "^13.1.3"
   "reflect-metadata": "^0.2.2"
