--- a/apps/auth-service/.env.example
+++ b/apps/auth-service/.env.example
@@ -1,7 +1,12 @@
-NODE_ENV=
+NODE_ENV=local
+APP_NAME=users-service
 APP_PORT=4103
+
+AUTH_SERVICE_GRAPHQL_URL=http://localhost:4103
 
 LOG_PRETTY=true
 LOG_LEVEL=debug
 
 INTERNAL_REGISTRY_SERVER_HOST=http://localhost:4100
+
+DB_CONNECTION_URL=
