--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -11,6 +11,13 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "migration:create": "create-migration",
+    "migration:run": "run-migrations --mode=dev",
+    "migration:run:prod": "run-migrations --mode=prod",
+    "migration:undo": "undo-migration --mode=dev",
+    "migration:undo:prod": "undo-migration --mode=prod",
+    "migration:undo:all": "undo-all-migrations --mode=dev",
+    "migration:undo:all:prod": "undo-all-migrations --mode=prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -19,14 +26,28 @@
   },
   "dependencies": {
     "@packages/nest-shared": "workspace:*",
+    "@packages/utils": "workspace:*",
+    "@packages/shared-types": "workspace:*",
+    "@packages/graphql-definitions": "workspace:*",
+    "@packages/grpc": "workspace:*",
+    "@apollo/server": "catalog:",
     "@nestjs/common": "catalog:",
     "@nestjs/core": "catalog:",
-    "@nestjs/platform-express": "catalog:",
+    "@nestjs/graphql": "catalog:",
+    "@nestjs/microservices": "catalog:",
+    "@nestjs/typeorm": "catalog:",
+    "@nestjs/apollo": "catalog:",
     "@as-integrations/express5": "catalog:",
+    "nestjs-pino": "catalog:",
+    "pino-http": "catalog:",
+    "@nestjs/platform-express": "catalog:",
     "reflect-metadata": "catalog:",
-    "rxjs": "catalog:"
+    "rxjs": "catalog:",
+    "pg": "catalog:",
+    "typeorm": "catalog:"
   },
   "devDependencies": {
+    "@packages/scripts": "workspace:*",
     "@packages/eslint-config-service": "workspace:*",
     "@packages/tsconfig": "workspace:*",
     "@nestjs/cli": "catalog:",
