--- a/apps/users-service/.env.example
+++ b/apps/users-service/.env.example
@@ -2,6 +2,9 @@ NODE_ENV=local
 APP_NAME=users-service
 APP_PORT=4102
 
+USERS_SERVICE_GRAPHQL_URL=http://localhost:4102
+USERS_SERVICE_GRPC_URL=http://localhost:4500
+
 LOG_PRETTY=true
 LOG_LEVEL=debug
 
