--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -29,6 +29,7 @@ catalog:
   "pino": "^10.1.1"
   "pino-http": "^11.0.0"
   "pino-pretty": "^13.1.3"
+  "class-validator": "^0.14.3"
   "reflect-metadata": "^0.2.2"
   "rxjs": "^7.8.2"
   "@types/express": "^5.0.0"
@@ -46,6 +47,8 @@ catalog:
   "tsc-alias": "^1.8.16"
   "tsconfig-paths": "^4.2.0"
   "typescript": "5.9.3"
+  "lodash": "4.17.21"
+  "@types/lodash": "4.17.23"
 
   # UI
   "react": "^19.2.3"
@@ -69,3 +72,11 @@ catalog:
   "@graphql-codegen/typescript-operations": "^5.0.7"
   "@graphql-codegen/near-operation-file-preset": "^3.0.2"
   "@graphql-codegen/typed-document-node": "^5.0.11"
+
+  # gRPC
+  "@bufbuild/protobuf": "^2.3.0"
+  "@grpc/grpc-js": "^1.14.3"
+  "@grpc/proto-loader": "^0.8.0"
+  "@nestjs/microservices": "^11.0.1"
+  "ts-proto": "^2.10.1"
+  "chokidar-cli": "^3.0.0"
