feat(AM-36): added grpc server configuration

--- a/apps/users-service/package.json
+++ b/apps/users-service/package.json
@@ -31,11 +31,15 @@
     "@packages/graphql-definitions": "workspace:*",
     "@apollo/server": "catalog:",
     "@nestjs/common": "catalog:",
+    "@nestjs/microservices": "catalog:",
     "@nestjs/core": "catalog:",
     "@nestjs/graphql": "catalog:",
     "@nestjs/typeorm": "catalog:",
     "@nestjs/apollo": "catalog:",
     "@as-integrations/express5": "catalog:",
+    "@grpc/grpc-js": "catalog:",
+    "@grpc/proto-loader": "catalog:",
+    "@grpc/reflection": "catalog:",
     "nestjs-pino": "catalog:",
     "pino-http": "catalog:",
     "@nestjs/platform-express": "catalog:",
