--- a/packages/nest-shared/package.json
+++ b/packages/nest-shared/package.json
@@ -30,6 +30,14 @@
       "types": "./dist/orm/index.d.ts",
       "default": "./dist/orm/index.js"
     },
+    "./graphql": {
+      "types": "./dist/graphql/index.d.ts",
+      "default": "./dist/graphql/index.js"
+    },
+    "./grpc": {
+      "types": "./dist/grpc/index.d.ts",
+      "default": "./dist/grpc/index.js"
+    },
     "./orm/migration": {
       "types": "./dist/orm/migration/index.d.ts",
       "default": "./dist/orm/migration/index.js"
@@ -67,6 +75,13 @@
     "@nestjs/config": "catalog:",
     "@nestjs/typeorm": "catalog:",
     "@nestjs/microservices": "catalog:",
+    "@apollo/server": "catalog:",
+    "@nestjs/apollo": "catalog:",
+    "@nestjs/graphql": "catalog:",
+    "@as-integrations/express5": "catalog:",
+    "@grpc/reflection": "catalog:",
+    "@grpc/grpc-js": "catalog:",
+    "@grpc/proto-loader": "catalog:",
     "nestjs-pino": "catalog:",
     "pino": "catalog:",
     "pino-pretty": "catalog:",
