--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -18,6 +18,7 @@ catalog:
   "@nestjs/schematics": "^11.0.0"
   "@nestjs/testing": "^11.0.1"
   "@nestjs/typeorm": "^11.0.0"
+  "@nestjs/microservices": "^11.1.12"
   "@apollo/subgraph": "^2.12.2"
   "@apollo/server": "^5.2.0"
   "@apollo/gateway": "^2.12.2"
@@ -77,6 +78,6 @@ catalog:
   "@bufbuild/protobuf": "^2.3.0"
   "@grpc/grpc-js": "^1.14.3"
   "@grpc/proto-loader": "^0.8.0"
-  "@nestjs/microservices": "^11.0.1"
+  "@grpc/reflection": "^1.0.4"
   "ts-proto": "^2.10.1"
   "chokidar-cli": "^3.0.0"
