--- a/apps/api-gateway-service/package.json
+++ b/apps/api-gateway-service/package.json
@@ -7,12 +7,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "gql:dev": "nest start --watch",
-    "rest:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "graphql:dev": "nest start --watch --entryFile graphql.main",
+    "graphql:prod": "node dist/graphql.main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
