--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -7,10 +7,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "graphql:dev": "nest start --watch --entryFile graphql.main",
+    "graphql:prod": "node dist/graphql.main",
     "migration:create": "create-migration",
     "migration:run": "run-migrations --mode=dev",
     "migration:run:prod": "run-migrations --mode=prod",
