--- a/apps/registry-service/package.json
+++ b/apps/registry-service/package.json
@@ -7,10 +7,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "rest:dev": "nest start --watch --entryFile rest.main",
+    "rest:prod": "node dist/rest.main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
