--- a/apps/users-service/package.json
+++ b/apps/users-service/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "build": "nest build",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "graphql:dev": "nest start --watch --entryFile graphql.main",
+    "grpc:dev": "nest start --watch --entryFile grpc.main",
+    "graphql:prod": "node dist/graphql.main",
+    "grpc:prod": "node dist/grpc.main",
     "migration:create": "create-migration",
     "migration:run": "run-migrations --mode=dev",
     "migration:run:prod": "run-migrations --mode=prod",
