feat(AM-36): added migrations for sessions

--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -23,34 +23,37 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@packages/nest-shared": "workspace:*",
-    "@packages/utils": "workspace:*",
-    "@packages/shared-types": "workspace:*",
-    "@packages/graphql-definitions": "workspace:*",
-    "@packages/grpc": "workspace:*",
     "@apollo/server": "catalog:",
+    "@as-integrations/express5": "catalog:",
+    "@nestjs/apollo": "catalog:",
     "@nestjs/common": "catalog:",
     "@nestjs/core": "catalog:",
+    "@nestjs/config": "catalog:",
     "@nestjs/graphql": "catalog:",
     "@nestjs/microservices": "catalog:",
-    "@nestjs/typeorm": "catalog:",
-    "@nestjs/apollo": "catalog:",
-    "@as-integrations/express5": "catalog:",
-    "nestjs-pino": "catalog:",
-    "pino-http": "catalog:",
     "@nestjs/platform-express": "catalog:",
+    "@nestjs/typeorm": "catalog:",
+    "@packages/graphql-definitions": "workspace:*",
+    "@packages/grpc": "workspace:*",
+    "@packages/nest-shared": "workspace:*",
+    "@packages/shared-types": "workspace:*",
+    "@packages/utils": "workspace:*",
+    "bcrypt": "catalog:",
+    "nestjs-pino": "catalog:",
+    "pg": "catalog:",
+    "pino-http": "catalog:",
     "reflect-metadata": "catalog:",
     "rxjs": "catalog:",
-    "pg": "catalog:",
     "typeorm": "catalog:"
   },
   "devDependencies": {
-    "@packages/scripts": "workspace:*",
-    "@packages/eslint-config-service": "workspace:*",
-    "@packages/tsconfig": "workspace:*",
     "@nestjs/cli": "catalog:",
     "@nestjs/schematics": "catalog:",
     "@nestjs/testing": "catalog:",
+    "@packages/eslint-config-service": "workspace:*",
+    "@packages/scripts": "workspace:*",
+    "@packages/tsconfig": "workspace:*",
+    "@types/bcrypt": "catalog:",
     "@types/express": "catalog:",
     "@types/jest": "catalog:",
     "@types/node": "catalog:",
