--- a/apps/auth-service/tsconfig.json
+++ b/apps/auth-service/tsconfig.json
@@ -4,6 +4,6 @@
     "outDir": "./dist",
     "baseUrl": "./src"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "db/migrations/**/*"],
   "exclude": ["./dist*"]
 }
