--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -50,6 +50,8 @@ catalog:
   "typescript": "5.9.3"
   "lodash": "4.17.21"
   "@types/lodash": "4.17.23"
+  "bcrypt": "^6.0.0"
+  "@types/bcrypt": "^6.0.0"
 
   # UI
   "react": "^19.2.3"
