feat(AM-36): added auth endpoints

--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -27,10 +27,12 @@
     "@as-integrations/express5": "catalog:",
     "@nestjs/apollo": "catalog:",
     "@nestjs/common": "catalog:",
-    "@nestjs/core": "catalog:",
     "@nestjs/config": "catalog:",
+    "@nestjs/core": "catalog:",
     "@nestjs/graphql": "catalog:",
+    "@nestjs/jwt": "catalog:",
     "@nestjs/microservices": "catalog:",
+    "@nestjs/passport": "catalog:",
     "@nestjs/platform-express": "catalog:",
     "@nestjs/typeorm": "catalog:",
     "@packages/graphql-definitions": "workspace:*",
@@ -39,7 +41,10 @@
     "@packages/shared-types": "workspace:*",
     "@packages/utils": "workspace:*",
     "bcrypt": "catalog:",
+    "cookie-parser": "catalog:",
     "nestjs-pino": "catalog:",
+    "passport": "catalog:",
+    "passport-jwt": "catalog:",
     "pg": "catalog:",
     "pino-http": "catalog:",
     "reflect-metadata": "catalog:",
@@ -54,9 +59,11 @@
     "@packages/scripts": "workspace:*",
     "@packages/tsconfig": "workspace:*",
     "@types/bcrypt": "catalog:",
+    "@types/cookie-parser": "catalog:",
     "@types/express": "catalog:",
     "@types/jest": "catalog:",
     "@types/node": "catalog:",
+    "@types/passport-jwt": "catalog:",
     "@types/supertest": "catalog:",
     "jest": "catalog:",
     "lint-staged": "catalog:",
