--- a/packages/graphql/definitions/package.json
+++ b/packages/graphql/definitions/package.json
@@ -25,25 +25,26 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@packages/shared-types": "workspace:*",
+    "@packages/nest-shared": "workspace:*",
+    "@packages/utils": "workspace:*",
     "@apollo/server": "catalog:",
     "@apollo/subgraph": "catalog:",
     "@nestjs/apollo": "catalog:",
     "@nestjs/common": "catalog:",
     "@nestjs/core": "catalog:",
     "@nestjs/graphql": "catalog:",
-    "@packages/shared-types": "workspace:*",
-    "@packages/utils": "workspace:*",
     "class-validator": "catalog:",
     "graphql": "catalog:",
     "reflect-metadata": "catalog:",
     "rxjs": "catalog:"
   },
   "devDependencies": {
+    "@packages/eslint-config-service": "workspace:*",
+    "@packages/tsconfig": "workspace:*",
     "@nestjs/cli": "catalog:",
     "@nestjs/schematics": "catalog:",
     "@nestjs/testing": "catalog:",
-    "@packages/eslint-config-service": "workspace:*",
-    "@packages/tsconfig": "workspace:*",
     "@types/jest": "catalog:",
     "@types/node": "catalog:",
     "@types/supertest": "catalog:",
