--- a/packages/nest-shared/package.json
+++ b/packages/nest-shared/package.json
@@ -30,6 +30,10 @@
       "types": "./dist/orm/index.d.ts",
       "default": "./dist/orm/index.js"
     },
+    "./auth": {
+      "types": "./dist/auth/index.d.ts",
+      "default": "./dist/auth/index.js"
+    },
     "./graphql": {
       "types": "./dist/graphql/index.d.ts",
       "default": "./dist/graphql/index.js"
@@ -75,6 +79,8 @@
     "@nestjs/config": "catalog:",
     "@nestjs/typeorm": "catalog:",
     "@nestjs/microservices": "catalog:",
+    "@nestjs/jwt": "catalog:",
+    "@nestjs/passport": "catalog:",
     "@apollo/server": "catalog:",
     "@nestjs/apollo": "catalog:",
     "@nestjs/graphql": "catalog:",
@@ -87,6 +93,8 @@
     "pino-pretty": "catalog:",
     "@nestjs/core": "catalog:",
     "@nestjs/platform-express": "catalog:",
+    "passport": "catalog:",
+    "passport-jwt": "catalog:",
     "reflect-metadata": "catalog:",
     "rxjs": "catalog:",
     "typeorm": "catalog:",
@@ -102,6 +110,7 @@
     "@types/express": "catalog:",
     "@types/jest": "catalog:",
     "@types/node": "catalog:",
+    "@types/passport-jwt": "catalog:",
     "@types/supertest": "catalog:",
     "jest": "catalog:",
     "lint-staged": "catalog:",
