--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,74 +7,41 @@ packages:
   - 'packages/graphql/*'
 
 catalog:
-  "@nestjs/axios": "^4.0.1"
+  # ============================================
+  # BACKEND (BE) DEPENDENCIES
+  # ============================================
+  
+  # NestJS Core & Platform
   "@nestjs/common": "^11.0.1"
-  "@nestjs/config": "^4.0.2"
   "@nestjs/core": "^11.0.1"
-  "@nestjs/graphql": "^13.2.3"
-  "@nestjs/apollo": "^13.2.3"
   "@nestjs/platform-express": "^11.0.1"
+  "@nestjs/config": "^4.0.2"
   "@nestjs/cli": "^11.0.0"
   "@nestjs/schematics": "^11.0.0"
   "@nestjs/testing": "^11.0.1"
+  
+  # NestJS Integrations
+  "@nestjs/axios": "^4.0.1"
+  "@nestjs/graphql": "^13.2.3"
+  "@nestjs/apollo": "^13.2.3"
   "@nestjs/typeorm": "^11.0.0"
   "@nestjs/microservices": "^11.1.12"
-  "@apollo/subgraph": "^2.12.2"
+  "@nestjs/jwt": "^11.0.2"
+  "@nestjs/passport": "^11.0.5"
+  "nestjs-pino": "^4.5.0"
+
+  # Apollo Server & Gateway
   "@apollo/server": "^5.2.0"
+  "@apollo/subgraph": "^2.12.2"
   "@apollo/gateway": "^2.12.2"
   "@as-integrations/express5": "^1.1.2"
+
+  # Database
   "typeorm": "^0.3.28"
   "pg": "^8.16.3"
+
+  # GraphQL
   "graphql": "^16.12.0"
-  "nestjs-pino": "^4.5.0"
-  "pino": "^10.1.1"
-  "pino-http": "^11.0.0"
-  "pino-pretty": "^13.1.3"
-  "class-validator": "^0.14.3"
-  "reflect-metadata": "^0.2.2"
-  "rxjs": "^7.8.2"
-  "@types/express": "^5.0.0"
-  "@types/jest": "^30.0.0"
-  "@types/node": "^22.10.7"
-  "@types/supertest": "^6.0.2"
-  "jest": "^30.0.0"
-  "lint-staged": "^16.2.7"
-  "prettier": "^3.4.2"
-  "source-map-support": "^0.5.21"
-  "supertest": "^7.0.0"
-  "ts-jest": "^29.2.5"
-  "ts-loader": "^9.5.2"
-  "ts-node": "^10.9.2"
-  "tsc-alias": "^1.8.16"
-  "tsconfig-paths": "^4.2.0"
-  "typescript": "5.9.3"
-  "lodash": "4.17.21"
-  "@types/lodash": "4.17.23"
-  "bcrypt": "^6.0.0"
-  "@types/bcrypt": "^6.0.0"
-
-  # UI
-  "react": "^19.2.3"
-  "react-dom": "^19.2.3"
-  "tailwindcss": "^4.1.18"
-  "vite": "^7.3.0"
-  "vite-tsconfig-paths": "^5.1.4"
-  "@types/react": "^19.2.3"
-  "@tailwindcss/vite": "^4.1.18"
-  "@types/react-dom": "^19.2.3"
-  "@vitejs/plugin-react": "^5.1.2"
-  "@heroui/react": "^2.8.7"
-  "@heroui/theme": "^2.4.25"
-  "framer-motion": "^12.23.26"
-  "@apollo/client": "^4.0.11"
-  "@graphql-typed-document-node/core": "^3.2.0"
-
-  # GraphQL Code Generator (latest versions compatible with Apollo Client v4)
-  "@graphql-codegen/cli": "^6.0.1"
-  "@graphql-codegen/typescript": "^5.0.7"
-  "@graphql-codegen/typescript-operations": "^5.0.7"
-  "@graphql-codegen/near-operation-file-preset": "^3.0.2"
-  "@graphql-codegen/typed-document-node": "^5.0.11"
 
   # gRPC
   "@bufbuild/protobuf": "^2.3.0"
@@ -83,3 +50,84 @@ catalog:
   "@grpc/reflection": "^1.0.4"
   "ts-proto": "^2.10.1"
   "chokidar-cli": "^3.0.0"
+
+  # Logger
+  "pino": "^10.1.1"
+  "pino-http": "^11.0.0"
+  "pino-pretty": "^13.1.3"
+
+  # Authentication & Security
+  "bcrypt": "^6.0.0"
+  "passport": "^0.7.0"
+  "passport-jwt": "^4.0.1"
+  "cookie-parser": "^1.4.7"
+
+  # Validation & Utils
+  "class-validator": "^0.14.3"
+  "reflect-metadata": "^0.2.2"
+  "rxjs": "^7.8.2"
+  "lodash": "4.17.21"
+
+  # Backend Type Definitions
+  "@types/express": "^5.0.0"
+  "@types/bcrypt": "^6.0.0"
+  "@types/lodash": "4.17.23"
+  "@types/cookie-parser": "^1.4.10"
+  "@types/passport-jwt": "^4.0.1"
+
+  # ============================================
+  # UI DEPENDENCIES
+  # ============================================
+  
+  # React
+  "react": "^19.2.3"
+  "react-dom": "^19.2.3"
+  "@types/react": "^19.2.3"
+  "@types/react-dom": "^19.2.3"
+
+  # Styling & UI Framework
+  "tailwindcss": "^4.1.18"
+  "@tailwindcss/vite": "^4.1.18"
+  "@heroui/react": "^2.8.7"
+  "@heroui/theme": "^2.4.25"
+  "framer-motion": "^12.23.26"
+
+  # Vite & Build Tools
+  "vite": "^7.3.0"
+  "vite-tsconfig-paths": "^5.1.4"
+  "@vitejs/plugin-react": "^5.1.2"
+
+  # Apollo Client & GraphQL
+  "@apollo/client": "^4.0.11"
+  "@graphql-typed-document-node/core": "^3.2.0"
+
+  # GraphQL Code Generator
+  "@graphql-codegen/cli": "^6.0.1"
+  "@graphql-codegen/typescript": "^5.0.7"
+  "@graphql-codegen/typescript-operations": "^5.0.7"
+  "@graphql-codegen/near-operation-file-preset": "^3.0.2"
+  "@graphql-codegen/typed-document-node": "^5.0.11"
+
+  # ============================================
+  # OTHER (Development, Testing, Build Tools)
+  # ============================================
+  
+  # TypeScript & Build Tools
+  "typescript": "5.9.3"
+  "ts-node": "^10.9.2"
+  "ts-loader": "^9.5.2"
+  "tsc-alias": "^1.8.16"
+  "tsconfig-paths": "^4.2.0"
+
+  # Testing
+  "jest": "^30.0.0"
+  "ts-jest": "^29.2.5"
+  "supertest": "^7.0.0"
+  "@types/jest": "^30.0.0"
+  "@types/supertest": "^6.0.2"
+  "@types/node": "^22.10.7"
+  "source-map-support": "^0.5.21"
+
+  # Code Quality
+  "lint-staged": "^16.2.7"
+  "prettier": "^3.4.2"
