feat(AM-36): fixed running errors

--- a/apps/api-gateway-service/.env.example
+++ b/apps/api-gateway-service/.env.example
@@ -5,3 +5,8 @@ LOG_PRETTY=true
 LOG_LEVEL=debug
 
 INTERNAL_REGISTRY_SERVER_HOST=http://localhost:4100
+
+RT_SECRET=rt_secret
+AT_SECRET=at_secret
+
+COOKIES_MAX_AGE=604800000 #7 days in ms
