--- a/apps/auth-service/.env.example
+++ b/apps/auth-service/.env.example
@@ -1,8 +1,10 @@
 NODE_ENV=local
-APP_NAME=users-service
-APP_PORT=4103
+APP_NAME=auth-service
+APP_GRAPHQL_PORT=4303
+APP_GRPC_PORT=4503
 
-AUTH_SERVICE_GRAPHQL_URL=http://localhost:4103
+AUTH_SERVICE_GRAPHQL_URL=http://localhost:4303
+AUTH_SERVICE_GRPC_URL=0.0.0.0:4503
 
 LOG_PRETTY=true
 LOG_LEVEL=debug
@@ -10,3 +12,6 @@ LOG_LEVEL=debug
 INTERNAL_REGISTRY_SERVER_HOST=http://localhost:4100
 
 DB_CONNECTION_URL=
+RT_SECRET=rt_secret
+AT_SECRET=at_secret
+COOKIES_MAX_AGE=604800000 #7 days in ms
