--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -9,6 +9,8 @@
     "build": "nest build",
     "graphql:dev": "nest start --watch --entryFile graphql.main",
     "graphql:prod": "node dist/graphql.main",
+    "grpc:dev": "nest start --watch --entryFile grpc.main",
+    "grpc:prod": "node dist/grpc.main",
     "migration:create": "create-migration",
     "migration:run": "run-migrations --mode=dev",
     "migration:run:prod": "run-migrations --mode=prod",
@@ -41,6 +43,7 @@
     "@packages/shared-types": "workspace:*",
     "@packages/utils": "workspace:*",
     "bcrypt": "catalog:",
+    "class-transformer": "catalog:",
     "cookie-parser": "catalog:",
     "nestjs-pino": "catalog:",
     "passport": "catalog:",
