--- a/apps/users-service/.env.example
+++ b/apps/users-service/.env.example
@@ -1,12 +1,14 @@
 NODE_ENV=local
 APP_NAME=users-service
-APP_PORT=4302
+APP_GRAPHQL_PORT=4302
+APP_GRPC_PORT=4502
 
 USERS_SERVICE_GRAPHQL_URL=http://localhost:4302
-USERS_SERVICE_GRPC_URL=http://localhost:4500
+USERS_SERVICE_GRPC_URL=0.0.0.0:4502
 
 LOG_PRETTY=true
 LOG_LEVEL=debug
 
 INTERNAL_REGISTRY_SERVER_HOST=http://localhost:4100
+
 DB_CONNECTION_URL=
