--- a/apps/api-gateway-service/package.json
+++ b/apps/api-gateway-service/package.json
@@ -9,6 +9,8 @@
     "build": "nest build",
     "graphql:dev": "nest start --watch --entryFile graphql.main",
     "graphql:prod": "node dist/graphql.main",
+    "rest:dev": "nest start --watch --entryFile rest.main",
+    "rest:prod": "node dist/rest.main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -16,19 +18,23 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
+    "@packages/nest-shared": "workspace:*",
+    "@packages/shared-types": "workspace:*",
+    "@packages/utils": "workspace:*",
+    "@packages/grpc": "workspace:*",
     "@apollo/gateway": "catalog:",
     "@apollo/server": "catalog:",
+    "@as-integrations/express5": "catalog:",
     "@nestjs/apollo": "catalog:",
     "@nestjs/axios": "catalog:",
     "@nestjs/common": "catalog:",
     "@nestjs/config": "catalog:",
     "@nestjs/core": "catalog:",
     "@nestjs/graphql": "catalog:",
+    "@nestjs/microservices": "catalog:",
     "@nestjs/platform-express": "catalog:",
-    "@as-integrations/express5": "catalog:",
-    "@packages/nest-shared": "workspace:*",
-    "@packages/shared-types": "workspace:*",
-    "@packages/utils": "workspace:*",
+    "class-transformer": "catalog:",
+    "cookie-parser": "catalog:",
     "nestjs-pino": "catalog:",
     "pino-http": "catalog:",
     "reflect-metadata": "catalog:",
@@ -40,6 +46,7 @@
     "@nestjs/testing": "catalog:",
     "@packages/eslint-config-service": "workspace:*",
     "@packages/tsconfig": "workspace:*",
+    "@types/cookie-parser": "catalog:",
     "@types/express": "catalog:",
     "@types/jest": "catalog:",
     "@types/node": "catalog:",
