--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -64,6 +64,7 @@ catalog:
 
   # Validation & Utils
   "class-validator": "^0.14.3"
+  "class-transformer": "^0.5.1"
   "reflect-metadata": "^0.2.2"
   "rxjs": "^7.8.2"
   "lodash": "4.17.21"
