feat(AM-36): fixed gateways and auth service

--- a/apps/api-gateway-service/.env.example
+++ b/apps/api-gateway-service/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV=local
-APP_PORT=4301
+APP_GRAPHQL_PORT=4301
+APP_REST_PORT=4101
 
 LOG_PRETTY=true
 LOG_LEVEL=debug
@@ -10,3 +11,4 @@ RT_SECRET=rt_secret
 AT_SECRET=at_secret
 
 COOKIES_MAX_AGE=604800000 #7 days in ms
+CORS_ORIGINS=*
