feat(AM-24): added localization and language selector

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -15,19 +15,23 @@
     "@apollo/client": "catalog:",
     "@graphql-typed-document-node/core": "catalog:",
     "@packages/ui-shared": "workspace:*",
-    "@tanstack/react-router": "^1.144.0",
+    "@tanstack/react-router": "catalog:",
     "graphql": "catalog:",
+    "i18next": "catalog:",
+    "i18next-browser-languagedetector": "catalog:",
+    "i18next-http-backend": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
+    "react-i18next": "catalog:",
     "rxjs": "catalog:",
     "tailwindcss": "catalog:"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "catalog:",
-    "@graphql-codegen/typescript": "catalog:",
-    "@graphql-codegen/typescript-operations": "catalog:",
     "@graphql-codegen/near-operation-file-preset": "catalog:",
     "@graphql-codegen/typed-document-node": "catalog:",
+    "@graphql-codegen/typescript": "catalog:",
+    "@graphql-codegen/typescript-operations": "catalog:",
     "@packages/eslint-config-ui": "workspace:*",
     "@packages/graphql-generated": "workspace:*",
     "@tailwindcss/vite": "catalog:",
