--- a/packages/ui-shared/package.json
+++ b/packages/ui-shared/package.json
@@ -11,11 +11,19 @@
       "types": "./dist/inputs/index.d.ts",
       "default": "./dist/inputs/index.js"
     },
+    "./dropdowns": {
+      "types": "./dist/dropdowns/index.d.ts",
+      "default": "./dist/dropdowns/index.js"
+    },
     "./hero-ui": {
       "types": "./dist/hero-ui/index.d.ts",
       "default": "./dist/hero-ui/index.js"
     },
-    "./hero-ui/styles.css": "./src/hero-ui/styles.css"
+    "./hero-ui/styles.css": "./src/hero-ui/styles.css",
+    "./icons": {
+      "types": "./dist/icons/index.d.ts",
+      "default": "./dist/icons/index.js"
+    }
   },
   "scripts": {
     "dev": "tsup --config tsup.config.ts --watch",
@@ -25,6 +33,7 @@
   },
   "dependencies": {
     "@heroui/button": "^2.2.29",
+    "@heroui/dropdown": "^2.3.29",
     "@heroui/input": "^2.4.30",
     "@heroui/react": "catalog:",
     "@heroui/theme": "catalog:",
