--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -86,6 +86,15 @@ catalog:
   "@types/react": "^19.2.3"
   "@types/react-dom": "^19.2.3"
 
+  # Router
+  "@tanstack/react-router": "^1.144.0"
+
+  # Localization
+  "i18next": "^25.8.0"
+  "react-i18next": "^16.5.3"
+  "i18next-browser-languagedetector": "^8.2.0"
+  "i18next-http-backend": "^3.0.2"
+
   # Styling & UI Framework
   "tailwindcss": "^4.1.18"
   "@tailwindcss/vite": "^4.1.18"
