--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/client": "catalog:",
     "@graphql-typed-document-node/core": "catalog:",
+    "@hookform/resolvers": "catalog:",
     "@packages/ui-shared": "workspace:*",
     "@tanstack/react-router": "catalog:",
     "graphql": "catalog:",
@@ -22,9 +23,11 @@
     "i18next-http-backend": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
+    "react-hook-form": "catalog:",
     "react-i18next": "catalog:",
     "rxjs": "catalog:",
-    "tailwindcss": "catalog:"
+    "tailwindcss": "catalog:",
+    "yup": "catalog:"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "catalog:",
