--- a/infra/deployment/docker/Dockerfile.vite
+++ b/infra/deployment/docker/Dockerfile.vite
@@ -2,15 +2,15 @@
 #
 # PREREQUISITES:
 #   Build Dockerfile.base first to create the base image with dependencies:
-#   
-#   docker build -f infra/deployment/Dockerfile.base \
+#
+#   docker build -f infra/deployment/docker/Dockerfile.base \
 #     --build-arg APP_NAME=admin \
 #     --build-arg EXCLUDED_PACKAGES="nest-shared scripts graphql/definitions grpc eslint-config-base eslint-config-service eslint-config-ui" \
 #     --build-arg CACHE_ID=pnpm-vite \
 #     -t animemoria/base:admin-deps .
 #
 # THEN BUILD THIS FILE:
-#   docker build -f infra/deployment/Dockerfile.vite \
+#   docker build -f infra/deployment/docker/Dockerfile.vite \
 #     --build-arg APP_NAME=admin \
 #     -t admin:latest .
 #
@@ -52,7 +52,7 @@ RUN for pkg in ${EXCLUDED_PACKAGES}; do \
 COPY apps/${APP_NAME} ./apps/${APP_NAME}
 
 # Copy cleanup script once (used multiple times)
-COPY infra/deployment/scripts/cleanup-build-artifacts.sh /tmp/cleanup-build-artifacts.sh
+COPY infra/deployment/docker/scripts/cleanup-build-artifacts.sh /tmp/cleanup-build-artifacts.sh
 RUN chmod +x /tmp/cleanup-build-artifacts.sh
 
 # Build packages first (workspace dependencies)
@@ -81,10 +81,10 @@ RUN apk add --no-cache dumb-init
 COPY --from=builder /app/apps/${APP_NAME}/dist /usr/share/nginx/html
 
 # Copy optimized nginx configuration with compression and caching
-COPY infra/deployment/nginx.conf /etc/nginx/conf.d/default.conf
+COPY infra/deployment/docker/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Create non-root nginx user (uses nginx-specific setup script)
-COPY infra/deployment/scripts/setup-nginx-user.sh /tmp/setup-nginx-user.sh
+COPY infra/deployment/docker/scripts/setup-nginx-user.sh /tmp/setup-nginx-user.sh
 RUN chmod +x /tmp/setup-nginx-user.sh && \
     /tmp/setup-nginx-user.sh nginx-runner 1001 1001 && \
     rm /tmp/setup-nginx-user.sh
