--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "prepare": "husky",
     "commitlint": "commitlint --edit",
-    "docker:build:admin": "./infra/deployment/build.sh vite admin",
-    "docker:build:registry": "./infra/deployment/build.sh nestjs registry-service rest.main",
-    "docker:build:users:grpc": "./infra/deployment/build.sh nestjs users-service grpc.main",
-    "docker:build:users:graphql": "./infra/deployment/build.sh nestjs users-service graphql.main",
-    "docker:build:auth:grpc": "./infra/deployment/build.sh nestjs auth-service grpc.main",
-    "docker:build:auth:graphql": "./infra/deployment/build.sh nestjs auth-service graphql.main",
-    "docker:build:api:gateway": "./infra/deployment/build.sh nestjs api-gateway-service graphql.main",
+    "docker:build:admin": "./infra/deployment/docker/build.sh vite admin",
+    "docker:build:registry": "./infra/deployment/docker/build.sh nestjs registry-service rest.main",
+    "docker:build:users:grpc": "./infra/deployment/docker/build.sh nestjs users-service grpc.main",
+    "docker:build:users:graphql": "./infra/deployment/docker/build.sh nestjs users-service graphql.main",
+    "docker:build:auth:grpc": "./infra/deployment/docker/build.sh nestjs auth-service grpc.main",
+    "docker:build:auth:graphql": "./infra/deployment/docker/build.sh nestjs auth-service graphql.main",
+    "docker:build:api:gateway": "./infra/deployment/docker/build.sh nestjs api-gateway-service graphql.main",
     "docker:build:services": "pnpm run docker:build:registry && pnpm run docker:build:users-grpc && pnpm run docker:build:auth-grpc && pnpm run docker:build:api-gateway",
     "docker:build:all": "pnpm run docker:build:admin && pnpm run docker:build:services"
   },
